dep.yaml
apiVersion: v1
kind: Deployment
metadata:
  namespace: rihaboueslati
  labels:
    app: exam
  name: exam
spec:
  replicas: 3
  selector:
    matchLabels:
      app: exam
  template:
    metadata:
      labels:
        app: exam
    spec:
      containers:
        - name: exam
          image: ghcr.io/horizon-school-of-digital-technologies/simple-webapp-color
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "64Mi"
              cpu: "250m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          volumeMounts:
            - name: exam-storage
              mountPath: "/tmp/data"
      volumes:
        - name: exam-storage
          persistentVolumeClaim:
            claimName: exam-pvc
