exam-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: rihaboueslati
  name : exam
  labels:
    app: exam
spec:
  containers:
  - name: webapp-container
    image: ghcr.io/horizon-school-of-digital-technologies/simple-webapp-color
    ports:
    - containerPort: 8080
    resources:
      limits:
        memory: "64Mi"
        cpu: "250m"
      requests:
        memory: "64Mi"
        cpu: "250m"
